tests/03-typecheck/15-data-init.ref
tests/03-typecheck/15-data-init.stack:5:5, Semantic error: func rot has non matching args, expected (a, b, c) but got (ptr, ptr)
tests/03-typecheck/15-data-init.stack:5:5, Semantic error: func ptr.+ has non matching args, expected (ptr, int) but got (ptr, c, a, b, int)
tests/03-typecheck/15-data-init.stack:5:5, Semantic error: func int.& has non matching args, expected (int) but got (ptr, c, ptr, a)
tests/03-typecheck/15-data-init.stack:5:5, Semantic error: func custom.* has non matching args, expected (ptr) but got (ptr, c)
tests/03-typecheck/15-data-init.stack:4:6, Semantic error: func invalid_constructor has non matching return, expected (custom) but got (ptr, custom)
